fix : 신상카페 슬라이드 이미지 overflow 수정

--- a/main_css/main.scss
+++ b/main_css/main.scss
@@ -920,6 +920,7 @@ body {
     /* 뉴 카페 이미지 슬라이드 */
     .swiper-container {
       height: 100%;
+      overflow: hidden;
       @include tablet {
         width: 70rem;
       }
